style: update docs

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="container">
             <h1 class="display-4">JSON2TABLE</h1>
             <div class="text-muted">Transform JSON data to HTML table, and can be exported as xls file or image file.</div>
+            <a target="_blank" href="https://github.com/ricosmall/json2table">Github</a>
         </div>
     </div>
     <div class="container">
@@ -25,7 +26,7 @@
             <label class="col-12">
                 <span>JSON data:</span>
                 <textarea class="form-control" name="data" id="data" rows="4"
-                placeholder="Must be array，like: [{a: { c: 1 }, b: 2}]"></textarea>
+                placeholder="Must be array，like: [{&quot;a&quot;: { &quot;c&quot;: 1 }, &quot;b&quot;: 2}]"></textarea>
             </label>
         </div>
         <div class="row">
