fix: fixed style file load error

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             if (!iframeDoc.head.children.length) {
                 var link = document.createElement('link');
                 link.rel='stylesheet';
-                link.href='/assets/bootstrap.min.css';
+                link.href='assets/bootstrap.min.css';
                 iframe.contentDocument.head.appendChild(link);
             }
             var copyEl = table.cloneNode(true);
