feat: add responsive class on table

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <button class="btn btn-primary btn-block" id="btn" onclick="print()">Transform to Table</button>
             </div>
         </div>
-        <table class="table" id="table"></table>
+        <table class="table table-responsive" id="table"></table>
         <div id="exportWrap" class="row py-4 d-none">
             <div class="col">
                 <button class="btn btn-primary btn-block" id="btn" onclick="exportToExcel()">Export XLS</button>
