--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 <button class="btn btn-primary btn-block" id="btn" onclick="print()">Transform to Table</button>
             </div>
         </div>
-        <table class="table table-responsive" id="table"></table>
+        <div class="table-responsive">
+            <table class="table text-nowrap" id="table"></table>
+        </div>
         <div id="exportWrap" class="row py-4 d-none">
             <div class="col">
                 <button class="btn btn-primary btn-block" id="btn" onclick="exportToExcel()">Export XLS</button>
