style: add placeholder text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <label class="col-lg-6">
                 <span>Define table head:</span>
                 <textarea class="form-control" name="thead" id="thead" rows="4"
-                    placeholder="Seperate by comma, or one name per line. like:"></textarea>
+                    placeholder="Seperate by comma, or one name per line. like: name, age"></textarea>
             </label>
         </div>
         <div class="row">
