--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     </div>
     <div class="container">
         <div class="text-right">
-            <button class="btn btn-secondary btn-sm" onclick="loadJSONExample(this)">Load a JSON data example</button>
+            <button class="btn btn-secondary btn-sm" onclick="loadJSONExample(this)">
+                <span class="spinner-border spinner-border-sm d-none"></span>
+                Load a JSON data example
+            </button>
         </div>
         <div class="row">
             <label class="col-12">
@@ -212,12 +215,14 @@
         }
         function loadJSONExample(btn) {
             btn.classList.add('disabled');
+            btn.firstElementChild.classList.remove('d-none');
             var q = new URLSearchParams(location.search.slice(1)).get('q') || 'json2table';
             var url = 'https://api.github.com/search/repositories?q=' + q + '&sort=stars&per_page=10';
             fetch(url)
                 .then(response => response.json())
                 .then(json => {
                     btn.classList.remove('disabled');
+                    btn.firstElementChild.classList.add('d-none');
                     var items = json.items;
                     console.log(items);
                     view.data.value = JSON.stringify(items);
