--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
         function loadJSONExample(btn) {
             btn.classList.add('disabled');
             btn.firstElementChild.classList.remove('d-none');
-            var q = new URLSearchParams(location.search.slice(1)).get('q') || 'json2table';
+            var searchParams = new URLSearchParams(location.search.slice(1));
+            var q = searchParams.get('q') || 'json2table';
             var url = 'https://api.github.com/search/repositories?q=' + q + '&sort=stars&per_page=10';
             fetch(url)
                 .then(response => response.json())
