--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="container">
         <div class="text-right">
-            <button class="btn btn-secondary btn-sm" onclick="loadJSONExample(this)">
+            <button id="loadExampleBtn" class="btn btn-secondary btn-sm" onclick="loadJSONExample()">
                 <span class="spinner-border spinner-border-sm d-none"></span>
                 Load a JSON data example
             </button>
@@ -84,7 +84,7 @@
         function $(id) {
             return document.getElementById(id);
         }
-        var view = ['data', 'rule', 'jsonWrap', 'json', 'handle', 'table', 'thead', 'export', 'exportWrap', 'canvasIframe']
+        var view = ['data', 'rule', 'jsonWrap', 'json', 'handle', 'table', 'thead', 'export', 'exportWrap', 'canvasIframe', 'loadExampleBtn']
             .reduce((result, key) => {
                 result[key] = $(key)
                 return result
@@ -213,17 +213,17 @@
                 iframe.contentDocument.body.removeChild(copyEl);
             })
         }
-        function loadJSONExample(btn) {
-            btn.classList.add('disabled');
-            btn.firstElementChild.classList.remove('d-none');
+        function loadJSONExample() {
+            view.loadExampleBtn.classList.add('disabled');
+            view.loadExampleBtn.firstElementChild.classList.remove('d-none');
             var searchParams = new URLSearchParams(location.search.slice(1));
             var q = searchParams.get('q') || 'json2table';
             var url = 'https://api.github.com/search/repositories?q=' + q + '&sort=stars&per_page=10';
             fetch(url)
                 .then(response => response.json())
                 .then(json => {
-                    btn.classList.remove('disabled');
-                    btn.firstElementChild.classList.add('d-none');
+                    view.loadExampleBtn.classList.remove('disabled');
+                    view.loadExampleBtn.firstElementChild.classList.add('d-none');
                     var items = json.items;
                     console.log(items);
                     view.data.value = JSON.stringify(items);
